# irl-paraboloid-testing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example_inputs/: input_random.json  input_random_bunny.json  input_random_cube.json  input_random_cubehole.json  input_random_dodeca.json  input_random_tet.json  input_sweep_cube.json  input_sweep_cubehole.json  input_sweep_dodeca.json  input_sweep_tet.json  input_translate.json
opt_build/: .h  .tpp
src/: CMakeLists.txt  amr_main.cpp  amr_run.cpp  amr_run.h  amr_run.tpp  bunny.h  cube_hole.h  cube_hole.tpp  irl_main.cpp  irl_poly.h  irl_poly.tpp  irl_run.h  irl_run.tpp  my_dodecahedron.h  my_dodecahedron.tpp
src/mappings/: cube_hole_mapping.txt  dodecahedron_mapping.txt  irl_poly_mapping.txt
